--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.2'
+	id 'org.springframework.boot' version '2.5.4'
 	id 'io.spring.dependency-management' version '1.1.2'
 }
 
@@ -31,7 +31,10 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java:8.0.32' //MySQL
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	//implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
+	implementation 'jakarta.transaction:jakarta.transaction-api:2.0.0'
+	implementation 'org.hibernate:hibernate-core:5.5.6.Final'
 }
 
 tasks.named('test') {
