--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.5.4'
+	id 'org.springframework.boot' version '3.1.2'
 	id 'io.spring.dependency-management' version '1.1.2'
 }
 
@@ -32,9 +32,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	//implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
-	implementation 'jakarta.transaction:jakarta.transaction-api:2.0.0'
-	implementation 'org.hibernate:hibernate-core:5.5.6.Final'
+	//implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
+	//implementation 'jakarta.transaction:jakarta.transaction-api:2.0.0'
+	//implementation 'org.hibernate:hibernate-core:5.5.6.Final'
+
+	//implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
 }
 
 tasks.named('test') {
