--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #DB Source url
-spring.datasource.url=jdbc:mysql://pae-db.cqui8efqt3ue.ap-northeast-2.rds.amazonaws.com:3306/paedb?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://pae-db.cqui8efqt3ue.ap-northeast-2.rds.amazonaws.com:3306/paedb?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
 #DB User Name
 spring.datasource.username=root
 #DB Password
@@ -15,5 +15,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #hangul
 server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
